k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: frontend-deployment
  namespace: chat-app

spec:
  replicas: 1

  selector:
    matchLabels:
      app: frontend

  template:
    metadata:
      name: frontend-pod
      labels:
        app: frontend

    spec:
      containers:
      - name: frontend-container
        image: harshal2602/chatapp-frontend:latest

        ports:
        - containerPort: 80
